--- a/resources/content/cattle-global.properties
+++ b/resources/content/cattle-global.properties
@@ -5,9 +5,9 @@
 api.ui.index=//releases.rancher.com/ui/latest
 api.ui.js.url=https://releases.rancher.com/api-ui/1.0.4/ui.min.js
 api.ui.css.url=https://releases.rancher.com/api-ui/1.0.4/ui.min.css
-agent.instance.image=rancher/agent-instance:v0.8.1
+agent.instance.image=rancher/agent-instance:dev
 cluster.image.name=${agent.instance.image}
-bootstrap.required.image=rancher/agent:v1.0.1
+bootstrap.required.image=rancher/agent:dev
 agent.package.python.agent.url=https://github.com/rancher/python-agent/releases/download/v0.78.2/python-agent.tar.gz
 agent.package.agent.binaries.url=https://github.com/rancher/agent-binaries/releases/download/v0.1.2/agent-binaries.tar.gz
 agent.package.node.agent.url=https://github.com/rancher/node-agent/releases/download/v0.1.0/node-agent.tar.gz
