Download architecture specific binaries to agent, agent-instance

--- a/code/packaging/app-config/src/main/resources/META-INF/cattle/api-server/defaults.properties
+++ b/code/packaging/app-config/src/main/resources/META-INF/cattle/api-server/defaults.properties
@@ -4,9 +4,11 @@ api.sub.max.pings=8640
 api.pub.default.publish.pattern=^reply\..*$
 api.pub.sub.servlet.timeout.ms=0
 subscribe.max.queued.messages=100
-agent.packages.types=pyagent,node-services
-agent.packages.pyagent=host-api,agent-binaries,python-agent,cadvisor
+agent.packages.types=pyagent,node-services,pyagent-arm,node-services-arm
+agent.packages.pyagent=host-api,python-agent,cadvisor
 agent.packages.node.services=rancher-metadata,rancher-dns,host-api,rancher-net
+agent.packages.pyagent.arm=host-api-arm,python-agent,cadvisor-arm
+agent.packages.node.services.arm=rancher-metadata-arm,rancher-dns-arm,host-api-arm,rancher-net-arm
 
 config.item.ignore.filesystem=false
 config.item.ignore.prefixes=.
