--- a/resources/content/cattle-global.properties
+++ b/resources/content/cattle-global.properties
@@ -9,13 +9,16 @@ agent.instance.image=rancher/agent-instance:v0.8.3
 cluster.image.name=${agent.instance.image}
 bootstrap.required.image=rancher/agent:v1.0.2
 agent.package.python.agent.url=https://github.com/rancher/python-agent/releases/download/v0.85.0/python-agent.tar.gz
-agent.package.agent.binaries.url=https://github.com/rancher/agent-binaries/releases/download/v0.1.2/agent-binaries.tar.gz
-agent.package.node.agent.url=https://github.com/rancher/node-agent/releases/download/v0.1.0/node-agent.tar.gz
 agent.package.rancher.dns.url=https://github.com/rancher/rancher-dns/releases/download/v0.9.2/rancher-dns.tar.gz
+agent.package.rancher.dns.arm.url=https://github.com/imikushin/rancher-dns/releases/download/v0.9.2_arm/rancher-dns_arm.tar.gz
 agent.package.rancher.metadata.url=https://github.com/rancher/rancher-metadata/releases/download/v0.5.1/rancher-metadata.tar.gz
+agent.package.rancher.metadata.arm.url=https://github.com/imikushin/rancher-metadata/releases/download/v0.5.1_arm/rancher-metadata_arm.tar.gz
 agent.package.host.api.url=https://github.com/rancher/host-api/releases/download/v0.33.1/host-api.tar.gz
+agent.package.host.api.arm.url=https://github.com/imikushin/host-api/releases/download/v0.33.1_arm/host-api_arm.tar.gz
 agent.package.rancher.net.url=https://github.com/rancher/rancher-net/releases/download/v0.4.1/rancher-net.tar.gz
+agent.package.rancher.net.arm.url=https://github.com/imikushin/rancher-net/releases/download/v0.4.1_arm/rancher-net_arm.tar.gz
 agent.package.cadvisor.url=https://github.com/rancher/cadvisor-package/releases/download/v0.23.2/cadvisor.tar.gz
+agent.package.cadvisor.arm.url=https://github.com/imikushin/cadvisor-package/releases/download/v0.23.2_arm/cadvisor_arm.tar.gz
 rancher.compose.linux.url=https://github.com/rancher/rancher-compose/releases/download/v0.1.0/rancher-compose_linux-amd64
 rancher.compose.darwin.url=https://github.com/rancher/rancher-compose/releases/download/v0.1.0/rancher-compose_darwin-amd64
 rancher.compose.windows.url=https://github.com/rancher/rancher-compose/releases/download/v0.1.0/rancher-compose_windows-386.exe
