--- a/code/packaging/app-config/src/main/resources/META-INF/cattle/api-server/defaults.properties
+++ b/code/packaging/app-config/src/main/resources/META-INF/cattle/api-server/defaults.properties
@@ -4,8 +4,8 @@ api.sub.max.pings=8640
 api.pub.default.publish.pattern=^reply\..*$
 api.pub.sub.servlet.timeout.ms=0
 subscribe.max.queued.messages=100
-agent.packages.types=pyagent,node-services
-agent.packages.pyagent=host-api,agent-binaries,python-agent,cadvisor
+agent.packages.types=pyagent,pyagent_arm,node-services,node-services_arm
+agent.packages.pyagent=host-api,python-agent,cadvisor
 agent.packages.node.services=rancher-metadata,rancher-dns,host-api,rancher-net
 
 config.item.ignore.filesystem=false
